<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="swoosh_logo">app logo</string>
    <string name="desired_league_desc">Desired League</string>
    <string name="desired_league_txt">Desired League?</string>
    <string name="mens_txt">MENS</string>
    <string name="mens_desc">MENS option</string>
    <string name="womens_txt">WOMENS</string>
    <string name="womens_desc">WOMENS option</string>
    <string name="co_ed_txt">CO-ED</string>
    <string name="co_ed_desc">CO-ED option</string>
    <string name="next_txt">Next</string>
    <string name="next_desc">Next button</string>
    <string name="get_started_txt">GET STARTED</string>
    <string name="get_started_desc">GET STARTED button</string>
    <string name="go_all_in_txt">GO ALL IN</string>
    <string name="go_all_in_desc">GO ALL IN</string>
    <string name="on_going_all_out_txt">ON GOING ALL OUT</string>
    <string name="on_going_all_out_desc">ON GOING ALL OUT</string>
    <string name="paragraph_txt">Find a team in your city and dominate the league</string>
    <string name="i_am_a_txt">I am a...</string>
    <string name="i_am_a_desc">I am a</string>
    <string name="novice_txt">Novice</string>
    <string name="expert_txt">Expert</string>
    <string name="intermediate_txt">Intermediate</string>
    <string name="finish_txt">Finish</string>
    <string name="search_league_txt">Looking for a co-ed beginner league near you...</string>
</resources>
