<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.joemacdonald.swoosh.controller.SkillActivity">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beginnerballerbg" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/swoosh_logo"
        android:scaleType="fitCenter"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swooshlogo" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/i_am_a_desc"
        android:fontFamily="@font/montserrat"
        android:text="@string/i_am_a_txt"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/noviceSkillsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onNoviceClicked"
            android:text="@string/novice_txt"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textOff="@string/novice_txt"
            android:textOn="@string/novice_txt" />

        <ToggleButton
            android:id="@+id/intermediateSkillsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:contentDescription="@string/intermediate_txt"
            android:fontFamily="@font/montserrat"
            android:onClick="onIntermediateClicked"
            android:text="@string/intermediate_txt"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textOff="@string/intermediate_txt"
            android:textOn="@string/intermediate_txt" />

        <ToggleButton
            android:id="@+id/expertSkillsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:contentDescription="@string/expert_txt"
            android:fontFamily="@font/montserrat"
            android:onClick="onExpertClicked"
            android:text="@string/expert_txt"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textOff="@string/expert_txt"
            android:textOn="@string/expert_txt" />
    </LinearLayout>

    <Button
        android:id="@+id/finishSkillBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/swoosh_button"
        android:contentDescription="@string/finish_txt"
        android:fontFamily="@font/montserrat"
        android:onClick="onSkillFinishClicked"
        android:text="@string/finish_txt"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
